--- a/03_웹문서구조/06_웹문서구조_실습2_시맨틱.css
+++ b/03_웹문서구조/06_웹문서구조_실습2_시맨틱.css
@@ -2,11 +2,12 @@ body *{
 	border: 1px solid rebeccapurple;
 	box-sizing: border-box;
 }
-#wrap{
+/* #wrap{
 	width: 1000px;
 	height: 800px;
 	margin: auto;
 }
+
 
 #header{
 	height: 25%;
@@ -51,6 +52,66 @@ aside{
 #a1, #a2{
 	width: 40%;
 }
+
+footer{
+	height: 20%;
+} */
+
+#wrap2{
+	width: 1000px;
+	height: 800px;
+	margin: auto;
+}
+
+header{
+	height: 25%;
+}
+
+#header_contents{
+	height: 80%;
+}
+
+#header_contents div{
+	float: left;
+	height: 100%;
+}
+
+#header_1{
+	width: 15%;
+}
+
+#header_2{
+	width: 65%;
+}
+
+#header_3{
+	width: 20%;
+}
+
+nav{
+	height: 20%;
+}
+
+
+section{
+	height: 55%;
+}
+
+/* section>*{ */
+section>aside, section>article{
+	float: left;
+	height: 100%;
+}
+
+aside{
+	width: 20%;
+}
+
+#content_1, #content_2{
+	width: 40%;
+}
+
+
 
 footer{
 	height: 20%;
