--- a/MakingChrome/momentum/style.css
+++ b/MakingChrome/momentum/style.css
@@ -1,3 +1,15 @@
 body{
 	background-color: beige;
 }
+
+h1{
+	color: cornflowerblue;
+	transition: color .5s ease-in-out;
+}
+
+.active{
+	color: tomato;
+}
+.sexy_font{
+	font-family: cursive;
+}
