--- a/CodingApple/JS&JQuery/main.css
+++ b/CodingApple/JS&JQuery/main.css
@@ -9,3 +9,43 @@
 .yellow-bg{
 	background: yellow;
 }
+
+.main-background{
+	background-image: url(../../resources/image/river1.PNG);
+	background-size: cover;
+	color: rgb(0, 0, 0);
+	border-radius: 0px;
+}
+
+.black-background{
+	background: rgba(0, 0, 0, 0.5);
+	position: fixed;
+	z-index: 5;
+	/* 5 이상으로 : 부트스트랩이 1~4를 사용하기 때문에 5이상으로 해야 앞으로 나올 수 있다!! */
+	width: 100%;
+	height: 100%;
+	display: none;
+	/* visibility: hidden; */
+	/* 위의 경우, 자국이 남을 수 있다. */
+	/* opacity: 0; */
+	/* 투명도 설정, 0~1 */
+}
+
+.white-background{
+	background: white;
+	width: 80%;
+	margin: 100px auto;
+	padding: 20px;
+	border-radius: 10px;
+}
+
+.nav-menu{
+	display: flex;
+	justify-content: space-between;
+	padding: 15px;
+	align-items: center;
+}
+
+.nav-sub{
+	display: none;
+}
