--- a/CodingApple/JS&JQuery/main.css
+++ b/CodingApple/JS&JQuery/main.css
@@ -24,7 +24,15 @@
 	/* 5 이상으로 : 부트스트랩이 1~4를 사용하기 때문에 5이상으로 해야 앞으로 나올 수 있다!! */
 	width: 100%;
 	height: 100%;
-	display: none;
+	/* 1. 시작 화면 만들기 */
+	display: block;
+	/* margin-top: 대신 이젠 transform */
+	transform: translateY(-1000px);
+
+	/* 모든CSS속성이 변경될 때 ?초(1s)에 걸쳐서 서서히 변경됨 */
+	/* 4. 스무스한 동작은 animate 대신 transition!!! */
+	transition: all 0.5s;
+
 	/* visibility: hidden; */
 	/* 위의 경우, 자국이 남을 수 있다. */
 	/* opacity: 0; */
@@ -52,4 +60,23 @@
 
 .alert-warning{
 	display: none;
+}
+
+.left-menu{
+	width: 150px;
+	height: 100%;
+	background: black;
+	color: white;
+	position: fixed;
+	margin-left: -150px;
+	/* margin-left: 0px; */
+	/* 자스로 0 까지 천천히! */
+}
+
+.slide-down{
+	transform: translateY(0px);
+}
+
+.slide-up{
+	transform: translateY(-1000px)
 }
