--- a/CodingApple/JS&JQuery/main.css
+++ b/CodingApple/JS&JQuery/main.css
@@ -211,3 +211,60 @@ ul.list::after {
 .size-select{
 	display: block;
 }
+
+
+/* --------sticky------ */
+.grey{
+	background: lightgrey;
+	height: 2000px;
+	margin-top: 500px;
+}
+
+.image{
+	float:right;
+	width: 50%;
+	position: sticky;
+	/* 뷰포트의 어디쯤 위치 */
+	top: 100px;
+}
+/*
+position sticky vs. fixed
+fixed : 무조건 뷰포트에 고정
+sticky : 조건부 fixed,
+- 스크롤하다가 해당 요소를 만나면고정
+- 부모박스 넘어서면 해제
+
+주의!! sticky는
+1. 스크롤을 할만한 부모 박스가 있어야 하고
+2. top 등 좌표속성과 함께 써야 제대로 보인다.
+
+*/
+
+.text{
+	float:left;
+	width:40%;
+	font-size:1.5em
+}
+
+/* -----scroll----- */
+.card-background{
+	height:3000px;
+	margin-top: 200px;
+	margin-bottom: 1600px;
+}
+
+.card-box img{
+	display:block;
+	/* 가운데 정렬 */
+	margin: auto;
+	max-width: 80%;
+}
+
+.card-box{
+	position: sticky;
+	/* 스크롤이 만나면 해당 요소 만나면
+	뷰포트 위에서 400px에 고정 */
+	top: 200px;
+	/* card끼리 간격 */
+	margin-top: 200px;
+}
