--- a/CodingApple/WebDev/main.css
+++ b/CodingApple/WebDev/main.css
@@ -1,15 +1,84 @@
-/* nav바 */
-/* .nav-brand{
-	margin-left: 20%;
-} */
-.navbar{
-	/* justify-content: center; */
-}
+/* nav */
 
 .nav-brand{
 	margin-right: 16px;
 }
 
-footer{
+/* =============================== */
 
+/* footer */
+
+
+#footer{
+	color: white;
+	height: 10vh;
+	/* line-height: 100px; */
+	align-self: flex-end;
+	display: flex;
+	align-items: center;
+}
+
+
+/* ============================== */
+
+/* section */
+
+/* #sec0{
+	height: 83vh;
+} */
+
+#sec1{
+	display: flex;
+	align-items: center;
+}
+
+
+
+
+
+
+/* #sec{
+	display: flex;
+}
+
+.item:nth-child(1){
+	flex: 2;
+}
+.item:nth-child(2){
+	flex: 1;
+} */
+
+/* ------------------ */
+
+/* 섹션1 - 카드 */
+
+.card{
+	/* position: relative; */
+
+}
+
+.price{
+	font-weight: bold;
+	font-size: 1.1rem;
+}
+
+
+/* ---------------------- */
+
+/* 섹션2 - 장바구니 */
+
+#basket{
+	border: 1px solid grey;
+	border-radius: 6px;
+}
+
+#dropArea{
+	border: 1px solid;
+	width: 100%;
+	height: 200px;
+	text-align: center;
+	line-height: 200px;
+	background: #333;
+	color: white;
+	border-radius: 6px;
 }
